<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Inventorial</string>
    <string name="error">Something went wrong!</string>
    <string name="error_no_cause">Something went wrong!\n%1$s</string>
    <string name="error_cause">Something went wrong!\n%1$s\n%2$s</string>
    <string name="content_authority">inc.ahmedmourad.inventorial</string>
    <string name="product_image">Product Image</string>
    <string name="pick_a_folder">Pick a folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="camera">Camera</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="save">Save</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="new_supplier">Add New Supplier</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add">ADD</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_new_supplier">Add New Supplier</string>
    <string name="no_supplier_selected">No supplier selected</string>
    <string name="no_suppliers_found">No suppliers found</string>
    <string name="product_details">Product Details</string>
    <string name="not_available">Not Available</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="view_products">View Products</string>
    <string name="details_price">$%1$s</string>
    <string name="details_quantity">%1$s Units</string>
    <string name="products_from">Products from %1$s</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete">DELETE</string>
    <string name="dialog_message_delete_product">Delete product %1$s?</string>
    <string name="update">Update</string>
    <string name="increment">Add</string>
    <string name="decrement">Take</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="increment_product_quantity">Increment Product Quantity</string>
    <string name="decrement_product_quantity">Decrement Product Quantity</string>
    <string name="no_entities_left">There aren\'t any entities left of this product.</string>
    <string name="success">Success!</string>
    <string name="increase_quantity_by">Increase %1$s Quantity By</string>
    <string name="decrease_quantity_by">Decrease %1$s Quantity By</string>
    <string name="increase">INCREASE</string>
    <string name="decrease">DECREASE</string>
    <string name="empty_box">Empty Box</string>
    <string name="empty_inventorial">Your Inventorial is empty.\nAdd products to fill.</string>
    <string name="product_name_exists">Product name already exists!</string>
    <string name="supplier_name_exists">Supplier name already exists!</string>
    <string name="view">View</string>
    <string name="sans_serif_light" translatable="false">sans-serif-light</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
</resources>
