<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="24dp"
        android:paddingEnd="28dp"
        android:paddingStart="28dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_product_elements_spacing">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_product_elements_spacing">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp">

            <Spinner
                android:id="@+id/add_product_suppliers"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/product_new_supplier"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/new_supplier"
                android:textColor="@color/colorTextPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/add_product_image"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/add_product_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/choose_an_image"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/add_product_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/add_product_save_side_margins"
            android:layout_marginStart="@dimen/add_product_save_side_margins"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/save"
            android:enabled="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
