<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:paddingBottom="6dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="6dp"
    tools:ignore="Overdraw">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/product_image_size"
        android:layout_height="@dimen/product_image_size"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/product_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            tools:text="Product name" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="$500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/product_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/increment_product_quantity"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/product_arrow_text_spacing"
            android:paddingEnd="@dimen/product_arrow_padding_end"
            android:paddingStart="@dimen/product_arrow_padding_start"
            android:paddingTop="@dimen/product_arrow_padding_border"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_up" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@string/sans_serif_light"
            android:textSize="16sp"
            tools:text="300" />

        <ImageButton
            android:id="@+id/product_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/decrement_product_quantity"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/product_arrow_padding_border"
            android:paddingEnd="@dimen/product_arrow_padding_end"
            android:paddingStart="@dimen/product_arrow_padding_start"
            android:paddingTop="@dimen/product_arrow_text_spacing"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_down" />

    </LinearLayout>

</LinearLayout>
